[gd_scene load_steps=3 format=2]

[ext_resource path="res://dtheme.tres" type="Theme" id=1]
[ext_resource path="res://src/preference_pane.gd" type="Script" id=2]

[node name="preference_pane" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -2.0
margin_top = 3.0
margin_right = 582.0
margin_bottom = 478.0
color = Color( 0.341176, 0.341176, 0.341176, 1 )

[node name="Label" type="Label" parent="."]
margin_left = 127.0
margin_top = 167.0
margin_right = 210.0
margin_bottom = 222.0
text = "Name
"

[node name="Label2" type="Label" parent="."]
margin_left = 207.0
margin_top = 32.0
margin_right = 518.0
margin_bottom = 96.0
text = "Preferences"

[node name="CheckBox" type="CheckBox" parent="."]
margin_left = 115.0
margin_top = 249.0
margin_right = 462.0
margin_bottom = 322.0
theme = ExtResource( 1 )
text = "Allow Col to be checkmated"
align = 1
icon_align = 1
expand_icon = true

[node name="save" type="Button" parent="."]
margin_left = 352.0
margin_top = 398.0
margin_right = 506.0
margin_bottom = 455.0
text = "Save"

[node name="cancel" type="Button" parent="."]
margin_left = 81.0
margin_top = 396.0
margin_right = 232.0
margin_bottom = 452.0
text = "Cancel"

[node name="namet" type="TextEdit" parent="."]
margin_left = 218.0
margin_top = 164.0
margin_right = 471.0
margin_bottom = 199.0
text = "Player"

[connection signal="pressed" from="CheckBox" to="." method="_on_CheckBox_pressed"]
[connection signal="pressed" from="save" to="." method="_on_save_pressed"]
[connection signal="pressed" from="cancel" to="." method="_on_cancel_pressed"]
[connection signal="text_changed" from="namet" to="." method="_on_TextEdit_text_changed"]
